Updated front-end and resolve few issues